--- a/style.css
+++ b/style.css
@@ -33,7 +33,27 @@
     
     
     ol li:nth-child(odd) {
-       background-color: aquamarine; 
+       background-color: gray 
               
+    }
+    
+    .listas{
+      background-color: aliceblue;
+      position: relative;
+      height: 200px;
+    }
+
+    #habilidades{
+    
+     float: left;
+     
+
+    }
+    #paises{
+      position: relative;
+      height: 200px;
+      left: 200px; 
+      top: 25px;
+    
     }
 
